After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694732 - gdk: prevent NULL pointer access when debugging is enabled
gdk: prevent NULL pointer access when debugging is enabled
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-02-26 11:21 UTC by Thomas Wood
Modified: 2013-02-26 15:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdk: prevent NULL pointer access when debugging is enabled (838 bytes, patch)
2013-02-26 11:21 UTC, Thomas Wood
committed Details | Review

Description Thomas Wood 2013-02-26 11:21:20 UTC
The timings variable can be NULL, at least when running with the Wayland
backend. This is a simple fix, but needs checking to ensure that NULL is a
valid value at this point and not the result of some other issue.
Comment 1 Thomas Wood 2013-02-26 11:21:22 UTC
Created attachment 237424 [details] [review]
gdk: prevent NULL pointer access when debugging is enabled
Comment 2 Owen Taylor 2013-02-26 15:24:08 UTC
Review of attachment 237424 [details] [review]:

OK to commit. Please add the following body to the commit message.

 If no updates, redraws, or repaints have been scheduled for this
 frame, we will skip immediately to RESUME_EVENTS, and no GdkFrameTimings
 will be created.
Comment 3 Thomas Wood 2013-02-26 15:29:24 UTC
Attachment 237424 [details] pushed as e972624 - gdk: prevent NULL pointer access when debugging is enabled

Thanks for the explanation, I've added it to the commit as requested.